<resources>
    <string name="app_name">Mind-Supporter</string>
    <string name="show_pending">Show pending</string>
    <string name="show_finished">Show finished</string>
    <string name="show_all">Show all</string>
    <string name="show_sorted_by_priority">Show sorted by Priority</string>
    <string name="new_todo_note">Note</string>
    <string name="new_todo_deadline">Deadline</string>
    <string name="new_todo_time_duration">Duration</string>
    <string name="new_todo_priority">Priority</string>
    <string name="new_todo_picture">Picture</string>
    <string name="new_todo_activity">Activity</string>
    <string name="new_todo_your_note">put your notes here…</string>
    <string name="new_todo_upload_picture">Upload Picture</string>
    <string name="image_view_content_description">ToDo Image</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="open">open</string>
    <string name="done">done</string>
    <string name="status">Status</string>
    <string name="undone">undone</string>
    <string name="abort">abort ToDo</string>
    <string name="save">save ToDo</string>
    <string name="pick_picture">pick Picture from Library</string>
    <string name="content_descriptor_floating_button">A button to add a todo</string>
    <string name="content_descriptor_floating_button_sort">A button to sort todos</string>
    <string-array name="time_units">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
    </string-array>
</resources>